developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registrations_Summary__c/OJSERLIB__VEDA_PPSR_Registrations_Summary__c.object-meta.xml
<CustomObject>
    <label>VEDA PPSR Registration Summary</label>
    <nameField>
        <displayFormat>PPSRR-{0000}</displayFormat>
        <label>PPSR Registrations  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VEDA PPSR Registrations Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>