developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registrations_Summary__c/fields/OJSERLIB__ALLPAAP_No_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ALLPAAP_No_Exceptions__c</fullName>
    <label>ALLPAAP No Exceptions</label>
    <length>4</length>
    <type>Text</type>
</CustomField>