developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registrations_Summary__c/fields/OJSERLIB__Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Organisation_Name__c</fullName>
    <label>Organisation Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>