developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registrations_Summary__c/fields/OJSERLIB__PPSR_Notes__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__PPSR_Notes__c</fullName>
    <label>PPSR Notes</label>
    <length>225</length>
    <type>Text</type>
</CustomField>