developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registrations_Summary__c/fields/OJSERLIB__Search_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Search_Date__c</fullName>
    <label>Search Date</label>
    <type>DateTime</type>
</CustomField>