developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registrations_Summary__c/fields/OJSERLIB__Search_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Search_Number__c</fullName>
    <label>Search Number</label>
    <length>75</length>
    <type>Text</type>
</CustomField>