developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registrations_Summary__c/fields/OJSERLIB__Total_Pmsi_Registrations__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Total_Pmsi_Registrations__c</fullName>
    <label>Total Pmsi Registrations</label>
    <length>10</length>
    <type>Text</type>
</CustomField>