developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registrations_Summary__c/fields/OJSERLIB__Total_Regis_Other_Fin_Secu_Parties__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Total_Regis_Other_Fin_Secu_Parties__c</fullName>
    <label>Total Regis Other Fin Secu Parties</label>
    <length>10</length>
    <type>Text</type>
</CustomField>