developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registrations_Summary__c/fields/OJSERLIB__Total_Registrations_Desig_Sec_Partie__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Total_Registrations_Desig_Sec_Partie__c</fullName>
    <label>Total Registrations Desig Sec Partie</label>
    <length>10</length>
    <type>Text</type>
</CustomField>