developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registrations_Summary__c/fields/OJSERLIB__Total_Registrations_Over_Twelve_Months__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Total_Registrations_Over_Twelve_Months__c</fullName>
    <label>Total Registrations &gt; 12  Months</label>
    <length>10</length>
    <type>Text</type>
</CustomField>