developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registrations_Summary__c/fields/OJSERLIB__Total_Registrations_Under_Twelve_Months__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Total_Registrations_Under_Twelve_Months__c</fullName>
    <label>Total Registrations &lt; 12 Months</label>
    <length>10</length>
    <type>Text</type>
</CustomField>