developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registrations_Summary__c/fields/OJSERLIB__VEDA_Public_and_Credit_History__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Public_and_Credit_History__c</fullName>
    <label>VEDA Public and Credit History</label>
    <referenceTo>OJSERLIB__VEDA_Public_and_Credit_History_Info__c</referenceTo>
    <relationshipLabel>VEDA PPSR Registrations Summary</relationshipLabel>
    <relationshipName>VEDA_PPSR_Registrations_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>